kubernetes-ingress/ingress-arti.web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress-arti
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: arti.vishal-chauhan.in
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 9000
        path: /
        pathType: Prefix
### Kindly NOTE the port used in ingress is the port NOT target Port
